# ai-engineering-summit

./: 1. Why Semantic Search Isn't Enough.ipynb  2. RAG Evaluation.ipynb  3. Metadata-Enhanced Retrieval.ipynb  README.md  pyproject.toml
data/: queries.json  taxonomy.yml
helpers/: metrics.py  taxonomy.py
